TSK-952 Refactoring TaskanaAdapterRestService
-refactored REST-service
-added maven war-plugin for REST-service
-deleted former JBoss, SpringBoot and Core REST-Modules and replaced them with a single module
-added custom taskana-adapter-outbox-rest-spring-boot-starter
-changed the necessary methods in the CamundaSystemConnector
-added TaskanaOutboxSchemaCreator + sql scripts
-improved TaskanaTaskListener by removing string concatentation

--- a/taskana-adapter-test/pom.xml
+++ b/taskana-adapter-test/pom.xml
@@ -93,12 +93,6 @@
                         <version>${project.version}</version>
                 </dependency>
 
-                <dependency>
-                        <groupId>pro.taskana</groupId>
-                         <artifactId>taskana-adapter-camunda-outbox-rest-spring-boot</artifactId>
-                        <version>${project.version}</version>
-                </dependency>
-
                 <!-- Database Drivers -->
                 <dependency>
                         <groupId>com.ibm.db2.jcc</groupId>
@@ -117,6 +111,16 @@
 					<version>0.2</version>
 					<scope>test</scope>
 				</dependency>
+		<dependency>
+			<groupId>pro.taskana</groupId>
+			<artifactId>taskana-adapter-outbox-rest-spring-boot-starter</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-spring-boot-starter</artifactId>
+			<version>3.0.0.Final</version>
+		</dependency>
         </dependencies>
 
         <!-- -->
