--- a/taskana-adapter-test/src/main/resources/application.properties
+++ b/taskana-adapter-test/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.main.allow-bean-definition-overriding=true
 #logging.level.org.camunda.*=DEBUG
 #logging.level.org.camunda.bpm.engine=TRACE
 #logging.level.org.camunda.bpm.engine.*=TRACE
+#logging.level.com.fasterxml.jackson.*=TRACE
 
 
 logging.level.pro.taskana=info
@@ -34,7 +35,7 @@ taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.m
 # Set URLs of Camunda REST API and associated Camunda task events. The format is
 # <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
 
-taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/rest/engine/default | http://localhost:${server.port}/taskana-listener-events
+taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/rest/engine/default | http://localhost:${server.port}/
 ####################################################################################
 # Taskana-connector properties
 #
@@ -64,7 +65,7 @@ taskana.schemaName=TASKANA
 #H2
 #camunda.datasource.jdbcUrl= jdbc:h2:./camunda-db;DB_CLOSE_DELAY=-1;MVCC=TRUE;DB_CLOSE_ON_EXIT=FALSE
 #camunda.datasource.jdbcUrl=jdbc:h2:mem:camunda;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-camunda.datasource.jdbcUrl=jdbc:h2:mem:camunda;IGNORECASE=TRUE;LOCK_MODE=0;DB_CLOSE_ON_EXIT=FALSE
+camunda.datasource.jdbcUrl=jdbc:h2:mem:camunda;IGNORECASE=TRUE;LOCK_MODE=0;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1
 camunda.datasource.driverClassName=org.h2.Driver
 camunda.datasource.username=sa
 camunda.datasource.password=sa
