--- a/taskana-adapter-camunda-system-connector/pom.xml
+++ b/taskana-adapter-camunda-system-connector/pom.xml
@@ -46,11 +46,17 @@
                    <artifactId>taskana-adapter</artifactId>
                    <version>${project.version}</version>
               </dependency>
-              <dependency>
-                    <groupId>pro.taskana</groupId>
-                    <artifactId>taskana-core</artifactId>
-	            <version>1.1.5-SNAPSHOT</version>
-              </dependency>
+            <dependency>
+                <groupId>pro.taskana</groupId>
+                <artifactId>taskana-core</artifactId>
+                <version>1.1.5-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>pro.taskana</groupId>
+                <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+                <classifier>classes</classifier>
+            </dependency>
 
              <dependency>
                   <groupId>org.springframework.boot</groupId>
