--- a/taskana-adapter-camunda-tasklistener/pom.xml
+++ b/taskana-adapter-camunda-tasklistener/pom.xml
@@ -19,6 +19,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>taskana-parse-listener</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
