--- a/taskana-adapter/pom.xml
+++ b/taskana-adapter/pom.xml
@@ -78,6 +78,20 @@
         </dependency>
 
         <dependency>
+            <groupId>pro.taskana</groupId>
+            <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <classifier>classes</classifier>
+        </dependency>
+
+        <dependency>
+            <groupId>pro.taskana</groupId>
+            <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <classifier>classes</classifier>
+        </dependency>
+
+        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.2</version>
