--- a/taskana-adapter-outbox-rest-spring-boot-starter/pom.xml
+++ b/taskana-adapter-outbox-rest-spring-boot-starter/pom.xml
@@ -38,6 +38,7 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.4-1206-jdbc42</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
