--- a/taskana-adapter-sample/src/main/resources/application.properties
+++ b/taskana-adapter-sample/src/main/resources/application.properties
@@ -1,22 +1,17 @@
 ######################################################################################
 ## Adapter properties
+######################################################################################
 ##
 #logging.level.org.springframework=DEBUG
 #logging.level.pro.taskana=DEBUG
 #logging.level.com.spring.ibatis=DEBUG
 #logging.level.com.spring.ibatis.*=DEBUG
 #logging.level.org.apache.ibatis=DEBUG
-## Set Server Port for Adapter
 
 logging.level.pro.taskana=info
 
+## Set Server Port for Adapter
 server.port = 8081
-
-taskana.adapter.schemaName=TCA
-
-taskana.adapter.total.transaction.lifetime.in.seconds = 120
-taskana.adapter.scheduler.run.interval.for.cleanup.tasks.cron=0 0/10 * * * *
-taskana.adapter.scheduler.task.age.for.cleanup.in.hours=10
 
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=10000
@@ -24,12 +19,16 @@ taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.m
 
 ####################################################################################
 # System connector properties
+####################################################################################
 #
-# Set camunda hosts
-taskana-system-connector-camundaSystemURLs=http://localhost:8080/engine-rest
+# Set URLs of Camunda REST API and associated Camunda task events. The format is
+# <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
+
+taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/rest/engine/default | http://localhost:${server.port}/
 
 ####################################################################################
-# taskana-connector propertiew
+# Taskana-connector properties
+####################################################################################
 #
 # Configue the dataource for Taskana DB (used by taskana-connector
 # taskana.datasource.jdbcUrl = jdbc:h2:tcp://localhost:8092/mem:taskana;IGNORECASE=TRUE;LOCK_MODE=0;INIT=CREATE SCHEMA IF NOT EXISTS TASKANA
@@ -48,3 +47,14 @@ taskana.datasource.driverClassName=org.postgresql.Driver
 taskana.datasource.username=postgres
 taskana.datasource.password=postgres
 taskana.schemaName=TASKANA
+
+taskana.adapter.mapping.default.domain=DOMAIN_A
+taskana.adapter.mapping.default.workbasket.key=DEFAULT_WORKBASKET
+taskana.adapter.mapping.default.classification.key=DEFAULT_CLASSIFICATION
+taskana.adapter.mapping.default.classification.type=TASK
+taskana.adapter.mapping.default.objectreference.company=DEFAULT_COMPANY
+taskana.adapter.mapping.default.objectreference.system=DEFAULT_SYSTEM
+taskana.adapter.mapping.default.objectreference.system.instance=DEFAULT_SYSTEM_INSTANCE
+taskana.adapter.mapping.default.objectreference.type=DEFAULT_TYPE
+taskana.adapter.mapping.default.objectreference.value=DEFAULT_VALUE
+
