--- a/taskana-adapter-wildfly-example/src/main/resources/application.properties
+++ b/taskana-adapter-wildfly-example/src/main/resources/application.properties
@@ -14,10 +14,6 @@ logging.level.pro.taskana=INFO
 ## Adapter properties
 ######################################################################################
 
-taskana.adapter.total.transaction.lifetime.in.seconds = 120
-taskana.adapter.scheduler.run.interval.for.cleanup.tasks.cron=0 0/10 * * * *
-taskana.adapter.scheduler.task.age.for.cleanup.in.hours=10
-
 taskana.adapter.scheduler.run.interval.for.start.taskana.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.complete.referenced.tasks.in.milliseconds=10000
 taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.milliseconds=10000
@@ -25,8 +21,11 @@ taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.m
 ####################################################################################
 # System connector properties
 ######################################################################################
-taskana-system-connector-camundaSystemURLs=http://localhost:8080/engine-rest
 
+# Set URLs of Camunda REST API and associated Camunda task events. The format is
+# <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
+
+taskana-system-connector-camundaSystemURLs=http://localhost:8080/engine-rest | http://localhost:8080/taskanaAdapter
 ####################################################################################
 # taskana-connector propertiew
 ######################################################################################
@@ -43,3 +42,14 @@ taskana.datasource.jndi-name=java:/TaskanaDS
 spring.resources.cache.cachecontrol.cache-private=true
 
 taskana.schemaName=TASKANA
+
+taskana.adapter.mapping.default.domain=DOMAIN_A
+taskana.adapter.mapping.default.workbasket.key=DEFAULT_WORKBASKET
+taskana.adapter.mapping.default.classification.key=DEFAULT_CLASSIFICATION
+taskana.adapter.mapping.default.classification.type=TASK
+taskana.adapter.mapping.default.objectreference.company=DEFAULT_COMPANY
+taskana.adapter.mapping.default.objectreference.system=DEFAULT_SYSTEM
+taskana.adapter.mapping.default.objectreference.system.instance=DEFAULT_SYSTEM_INSTANCE
+taskana.adapter.mapping.default.objectreference.type=DEFAULT_TYPE
+taskana.adapter.mapping.default.objectreference.value=DEFAULT_VALUE
+
