--- a/taskana-adapter-test/src/main/resources/application.properties
+++ b/taskana-adapter-test/src/main/resources/application.properties
@@ -30,7 +30,7 @@ taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.m
 # Set URLs of Camunda REST API and associated Camunda task events. The format is
 # <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
 
-taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/rest/engine/default | http://localhost:${server.port}/
+taskana-system-connector-camundaSystemURLs=http://localhost:${server.port}/rest/engine/default | http://localhost:${server.port}
 ####################################################################################
 # Taskana-connector properties
 ####################################################################################
