--- a/taskana-adapter-camunda-outbox-rest/pom.xml
+++ b/taskana-adapter-camunda-outbox-rest/pom.xml
@@ -1,79 +1,97 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>taskana-adapter-parent</artifactId>
-        <groupId>pro.taskana</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>war</packaging>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <failOnMissingWebXml>false</failOnMissingWebXml>
-    </properties>
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.2.2</version>
-                <configuration>
-                    <attachClasses>true</attachClasses>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+        <parent>
+                <artifactId>taskana-adapter-parent</artifactId>
+                <groupId>pro.taskana</groupId>
+                <version>0.0.2-SNAPSHOT</version>
+                <relativePath>../pom.xml</relativePath>
+        </parent>
+
+        <modelVersion>4.0.0</modelVersion>
+        <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
+        <packaging>war</packaging>
+        <name>taskana-adapter-camunda-outbox-rest</name>
+        <description>Provides access to Camunda Task Events via REST Api for the Adapter</description>
 
 
-    <dependencyManagement>
+        <build>
+                <plugins>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-compiler-plugin</artifactId>
+                                <version>${version.maven-compiler-plugin}</version>
+                                <configuration>
+                                        <source>${maven.compiler.source}</source>
+                                        <target>${maven.compiler.target}</target>
+                                </configuration>
+                        </plugin>
+                        <plugin>
+                                <artifactId>maven-war-plugin</artifactId>
+                                <version>${version.maven-war-plugin}</version>
+                                <configuration>
+                                        <attachClasses>true</attachClasses>
+                                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                                </configuration>
+                        </plugin>
+                </plugins>
+        </build>
+
+
+        <dependencyManagement>
+                <dependencies>
+                        <dependency>
+                                <groupId>org.camunda.spin</groupId>
+                                <artifactId>camunda-spin-bom</artifactId>
+                                <scope>import</scope>
+                                <type>pom</type>
+                                <version>${version.camunda.spin}</version>
+                        </dependency>
+                </dependencies>
+        </dependencyManagement>
+
         <dependencies>
-            <dependency>
-                <groupId>org.camunda.spin</groupId>
-                <artifactId>camunda-spin-bom</artifactId>
-                <scope>import</scope>
-                <type>pom</type>
-                <version>1.6.7</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-web</artifactId>
+                        <exclusions>
+                                <exclusion>
+                                        <groupId>org.springframework.boot</groupId>
+                                        <artifactId>spring-boot-starter-tomcat</artifactId>
+                                </exclusion>
+                        </exclusions>
+                        <version>${version.spring.boot}</version>
+                </dependency>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.camunda.spin</groupId>
-            <artifactId>camunda-spin-core</artifactId>
-            <version>1.6.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.camunda.spin</groupId>
-            <artifactId>camunda-spin-dataformat-all</artifactId>
-            <version>1.6.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>jaxrs-api</artifactId>
-            <version>3.0.12.Final</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.4.6</version>
-        </dependency>
-    </dependencies>
+
+                <dependency>
+                        <groupId>pro.taskana</groupId>
+                        <artifactId>taskana-adapter</artifactId>
+                        <version>${project.version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.camunda.spin</groupId>
+                        <artifactId>camunda-spin-core</artifactId>
+                        <version>${version.camunda.spin}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.camunda.spin</groupId>
+                        <artifactId>camunda-spin-dataformat-all</artifactId>
+                        <version>${version.camunda.spin}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.jboss.resteasy</groupId>
+                        <artifactId>jaxrs-api</artifactId>
+                        <version>${version.resteasy.jaxrs}</version>
+                        <scope>compile</scope>
+                </dependency>
+                <dependency>
+                        <groupId>org.mybatis</groupId>
+                        <artifactId>mybatis</artifactId>
+                        <version>${version.mybatis}</version>
+                </dependency>
+        </dependencies>
 
 
 </project>
