--- a/taskana-adapter-camunda-outbox-rest/src/main/webapp/WEB-INF/web.xml
+++ b/taskana-adapter-camunda-outbox-rest/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,5 @@
                  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
   http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
 
-        <display-name>TaskanaAdapterWildflySpring</display-name>
+        <display-name>TaskanaAdapter Outbox Rest Service</display-name>
 </web-app>
