--- a/taskana-adapter-camunda-system-connector/pom.xml
+++ b/taskana-adapter-camunda-system-connector/pom.xml
@@ -1,74 +1,52 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-        <modelVersion>4.0.0</modelVersion>
 
-        <groupId>pro.taskana</groupId>
+        <parent>
+                <groupId>pro.taskana</groupId>
+                <artifactId>taskana-adapter-parent</artifactId>
+                <version>0.0.2-SNAPSHOT</version>
+                <relativePath>../pom.xml</relativePath>
+        </parent>
+
+        <modelVersion>4.0.0</modelVersion>
         <artifactId>taskana-adapter-camunda-system-connector</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
         <packaging>jar</packaging>
 
         <name>taskana-adapter-camunda-system-connector</name>
         <description>System connector between taskana-adapter and Camunda</description>
 
-    <developers>
-        <developer>
-            <name>Konstantin Klaeger</name>
-        </developer>
-        <developer>
-            <name>Bernd Breier</name>
-        </developer>
-    </developers>
-
-        <parent>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
-                <version>2.0.3.RELEASE</version>
-                <relativePath/>
-        </parent>
-        <properties>
-                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-                <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-                <java.version>1.8</java.version>
-                <maven.compiler.source>1.8</maven.compiler.source>
-                <maven.compiler.target>1.8</maven.compiler.target>
-                <spring.version>5.0.5.RELEASE</spring.version>
-        </properties>
 
         <dependencies>
 
-              <dependency>
-                  <groupId>org.springframework.boot</groupId>
-                  <artifactId>spring-boot-starter-web</artifactId>
-              </dependency>
-              <dependency>
-                   <groupId>pro.taskana</groupId>
-                   <artifactId>taskana-adapter</artifactId>
-                   <version>${project.version}</version>
-              </dependency>
-            <dependency>
-                <groupId>pro.taskana</groupId>
-                <artifactId>taskana-core</artifactId>
-                <version>1.1.5-SNAPSHOT</version>
-            </dependency>
-            <dependency>
-                <groupId>pro.taskana</groupId>
-                <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
-                <classifier>classes</classifier>
-            </dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter</artifactId>
+                        <version>${version.spring.boot}</version>
+                </dependency>
 
-             <dependency>
-                  <groupId>org.springframework.boot</groupId>
-                  <artifactId>spring-boot-starter-test</artifactId>
-                  <scope>test</scope>
-                  <exclusions>
-                      <exclusion>
-                          <groupId>com.vaadin.external.google</groupId>
-                          <artifactId>android-json</artifactId>
-                      </exclusion>
-                  </exclusions>
-              </dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-web</artifactId>
+                        <version>${version.spring.boot}</version>
+                </dependency>
+                <dependency>
+                        <groupId>pro.taskana</groupId>
+                        <artifactId>taskana-adapter</artifactId>
+                        <version>${project.version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-test</artifactId>
+                        <scope>test</scope>
+                        <exclusions>
+                                <exclusion>
+                                        <groupId>com.vaadin.external.google</groupId>
+                                        <artifactId>android-json</artifactId>
+                                </exclusion>
+                        </exclusions>
+                        <version>${version.spring.boot}</version>
+                </dependency>
 
 
         </dependencies>
@@ -78,6 +56,7 @@
                         <plugin>
                                 <groupId>org.apache.maven.plugins</groupId>
                                 <artifactId>maven-failsafe-plugin</artifactId>
+                                <version>${version.maven.failsafe.plugin}</version>
                                 <configuration>
                                         <classpathDependencyExcludes>
                                                 <classpathDependencyExcludes>com.googlecode.json-simple:json-simple</classpathDependencyExcludes>
