--- a/taskana-adapter-outbox-rest-spring-boot-starter/pom.xml
+++ b/taskana-adapter-outbox-rest-spring-boot-starter/pom.xml
@@ -1,45 +1,44 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>taskana-adapter-parent</artifactId>
-        <groupId>pro.taskana</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+        <parent>
+                <artifactId>taskana-adapter-parent</artifactId>
+                <groupId>pro.taskana</groupId>
+                <version>0.0.2-SNAPSHOT</version>
+                <relativePath>../pom.xml</relativePath>
+        </parent>
+        <modelVersion>4.0.0</modelVersion>
+        <artifactId>taskana-adapter-outbox-rest-spring-boot-starter</artifactId>
 
-    <artifactId>taskana-adapter-outbox-rest-spring-boot-starter</artifactId>
 
+        <dependencies>
+                <dependency>
+                        <groupId>pro.taskana</groupId>
+                        <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
+                        <version>${project.version}</version>
+                        <classifier>classes</classifier>
+                </dependency>
+                <dependency>
+                        <groupId>pro.taskana</groupId>
+                        <artifactId>taskana-adapter-camunda-tasklistener</artifactId>
+                        <version>${project.version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-autoconfigure</artifactId>
+                        <version>${version.spring.boot}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-web</artifactId>
+                        <version>${version.spring.boot}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>${version.postgres}</version>
+                        <scope>test</scope>
+                </dependency>
 
-    <dependencies>
-        <dependency>
-            <groupId>pro.taskana</groupId>
-            <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <classifier>classes</classifier>
-        </dependency>
-        <dependency>
-            <groupId>pro.taskana</groupId>
-            <artifactId>taskana-adapter-camunda-tasklistener</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-            <version>2.1.8.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.2.1.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.4-1206-jdbc42</version>
-            <scope>test</scope>
-        </dependency>
-
-    </dependencies>
+        </dependencies>
 </project>
