--- a/taskana-adapter-sample/pom.xml
+++ b/taskana-adapter-sample/pom.xml
@@ -1,44 +1,39 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-        <modelVersion>4.0.0</modelVersion>
 
-        <groupId>pro.taskana</groupId>
+        <parent>
+                <artifactId>taskana-adapter-parent</artifactId>
+                <groupId>pro.taskana</groupId>
+                <version>0.0.2-SNAPSHOT</version>
+                <relativePath>../pom.xml</relativePath>
+        </parent>
+
+        <modelVersion>4.0.0</modelVersion>
         <artifactId>taskana-adapter-sample</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
         <packaging>jar</packaging>
 
         <name>taskana-adapter-sample</name>
         <url>http://maven.apache.org</url>
 
 
-        <parent>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
-                <version>2.0.2.RELEASE</version>
-                <relativePath /> <!-- lookup parent from repository -->
-        </parent>
-
-
-        <properties>
-                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        </properties>
-
         <dependencies>
-
                 <dependency>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-web</artifactId>
+                        <version>${version.spring.boot}</version>
                 </dependency>
                 <dependency>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-configuration-processor</artifactId>
                         <optional>true</optional>
+                        <version>${version.spring.boot}</version>
                 </dependency>
 
                 <dependency>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-test</artifactId>
+                        <version>${version.spring.boot}</version>
                         <scope>test</scope>
                 </dependency>
 
@@ -59,24 +54,25 @@
                 </dependency>
 
                 <dependency>
-                   <groupId>com.ibm.db2.jcc</groupId>
-                   <artifactId>db2jcc4</artifactId>
-                   <version>11.1.1.1</version>
-                </dependency>
+                        <groupId>com.ibm.db2.jcc</groupId>
+			<artifactId>db2jcc4</artifactId>
+			<version>${version.db2}</version>
+		</dependency>
 
-                <dependency>
-                        <groupId>org.postgresql</groupId>
-                        <artifactId>postgresql</artifactId>
-                        <version>42.2.5</version>
-                </dependency>
-        </dependencies>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>${version.postgres}</version>
+		</dependency>
+	</dependencies>
 
+	<!--
         <build>
                 <plugins>
                         <plugin>
                                 <groupId>org.apache.maven.plugins</groupId>
                                 <artifactId>maven-compiler-plugin</artifactId>
-                                <version>3.5.1</version>
+                                <version>${version.maven-compiler-plugin}</version>
                                 <configuration>
                                         <showWarnings>true</showWarnings>
                                         <debug>true</debug>
@@ -91,14 +87,15 @@
                         </plugin>
                 </plugins>
         </build>
-        <!--
+        -->
+	<!--
           this repository is needed to fetch com.ibm.db2.jcc
         -->
-        <repositories>
-                <repository>
-                        <id>novatec public</id>
-                        <name>novatec-repository</name>
-                        <url>https://repository.novatec-gmbh.de/content/repositories/novatec/</url>
-                </repository>
-        </repositories>
+	<repositories>
+		<repository>
+			<id>novatec public</id>
+			<name>novatec-repository</name>
+			<url>https://repository.novatec-gmbh.de/content/repositories/novatec/</url>
+		</repository>
+	</repositories>
 </project>
