--- a/taskana-adapter-taskana-connector/pom.xml
+++ b/taskana-adapter-taskana-connector/pom.xml
@@ -1,94 +1,75 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+        <parent>
+                <artifactId>taskana-adapter-parent</artifactId>
+                <groupId>pro.taskana</groupId>
+                <version>0.0.2-SNAPSHOT</version>
+                <relativePath>../pom.xml</relativePath>
+        </parent>
+
         <modelVersion>4.0.0</modelVersion>
-
-        <groupId>pro.taskana</groupId>
         <artifactId>taskana-adapter-taskana-connector</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
         <packaging>jar</packaging>
-
         <name>taskana-adapter-taskana-connector</name>
         <description>Connector between taskana-adapter and Taskana</description>
 
-        <developers>
-                <developer>
-                        <name>Konstantin Klaeger</name>
-                </developer>
-                <developer>
-                        <name>Bernd Breier</name>
-                </developer>
-        </developers>
-
-        <parent>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-parent</artifactId>
-                <version>2.0.3.RELEASE</version>
-                <relativePath />
-        </parent>
-
-        <properties>
-                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-                <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-                <java.version>1.8</java.version>
-                <maven.compiler.source>1.8</maven.compiler.source>
-                <maven.compiler.target>1.8</maven.compiler.target>
-                <spring.version>5.0.5.RELEASE</spring.version>
-        </properties>
-
         <dependencies>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter</artifactId>
+                        <version>${version.spring.boot}</version>
+                </dependency>
 
                 <dependency>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-starter-web</artifactId>
-                </dependency>
-                <dependency>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-starter-jdbc</artifactId>
+                        <version>${version.spring.boot}</version>
                 </dependency>
                 <dependency>
                         <groupId>org.springframework.boot</groupId>
                         <artifactId>spring-boot-configuration-processor</artifactId>
                         <optional>true</optional>
+                        <version>${version.spring.boot}</version>
                 </dependency>
                 <dependency>
-                <groupId>org.springframework.data</groupId>
-                    <artifactId>spring-data-commons</artifactId>
-                    <version>2.1.7.RELEASE</version>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-jdbc</artifactId>
+                        <version>${version.spring.boot}</version>
                 </dependency>
                 <dependency>
                         <groupId>junit</groupId>
                         <artifactId>junit</artifactId>
-                        <version>4.12</version>
+                        <version>${version.junit}</version>
                         <scope>test</scope>
                 </dependency>
 
                 <dependency>
                         <groupId>com.h2database</groupId>
                         <artifactId>h2</artifactId>
-                        <version>1.4.197</version>
+                        <version>${version.h2database}</version>
                         <scope>test</scope>
                 </dependency>
 
                 <dependency>
                         <groupId>com.ibm.db2.jcc</groupId>
                         <artifactId>db2jcc4</artifactId>
-                        <version>11.1.1.1</version>
+                        <version>${version.db2}</version>
                         <scope>test</scope>
                 </dependency>
 
                 <dependency>
                         <groupId>org.postgresql</groupId>
                         <artifactId>postgresql</artifactId>
-                        <version>42.2.5</version>
+                        <version>${version.postgres}</version>
                         <scope>test</scope>
                 </dependency>
 
                 <dependency>
                         <groupId>pro.taskana</groupId>
                         <artifactId>taskana-spring</artifactId>
-                        <version>1.1.5-SNAPSHOT</version>
+                        <version>${version.taskana}</version>
                 </dependency>
 
                 <dependency>
@@ -100,27 +81,10 @@
                 <dependency>
                         <groupId>org.mybatis.spring.boot</groupId>
                         <artifactId>mybatis-spring-boot-starter</artifactId>
-                        <version>1.3.2</version>
+                        <version>${version.spring.mybatis}</version>
                 </dependency>
 
         </dependencies>
-
-        <build>
-                <plugins>
-                        <plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-compiler-plugin</artifactId>
-                                <version>3.5.1</version>
-                                <configuration>
-                                        <showWarnings>true</showWarnings>
-                                        <debug>true</debug>
-                                        <compilerArgs>
-                                                <arg>-Xlint:all</arg>
-                                        </compilerArgs>
-                                </configuration>
-                        </plugin>
-                </plugins>
-        </build>
 
         <!-- this repository is needed to fetch com.ibm.db2.jcc -->
         <repositories>
