--- a/taskana-adapter-wildfly-example/src/main/resources/application.properties
+++ b/taskana-adapter-wildfly-example/src/main/resources/application.properties
@@ -25,7 +25,7 @@ taskana.adapter.scheduler.run.interval.for.check.cancelled.referenced.tasks.in.m
 # Set URLs of Camunda REST API and associated Camunda task events. The format is
 # <camundaSystem1-RestURL> | <camundaSystem1-TaskEventsURL> , ..., <camundaSystemN-RestURL> | <camundaSystemN-TaskEventsURL>
 
-taskana-system-connector-camundaSystemURLs=http://localhost:8080/engine-rest | http://localhost:8080/taskanaAdapter
+taskana-system-connector-camundaSystemURLs=http://localhost:8080/engine-rest | http://localhost:8080
 ####################################################################################
 # taskana-connector propertiew
 ######################################################################################
