--- a/taskana-adapter/pom.xml
+++ b/taskana-adapter/pom.xml
@@ -1,110 +1,58 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <groupId>pro.taskana</groupId>
-    <artifactId>taskana-adapter</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+        <parent>
+                <artifactId>taskana-adapter-parent</artifactId>
+                <groupId>pro.taskana</groupId>
+                <version>0.0.2-SNAPSHOT</version>
+                <relativePath>../pom.xml</relativePath>
+        </parent>
 
-    <name>taskana-adapter</name>
-    <description>Taskana Adapter for executing tasks from external systems</description>
+        <modelVersion>4.0.0</modelVersion>
+        <artifactId>taskana-adapter</artifactId>
+        <packaging>jar</packaging>
+        <name>taskana-adapter</name>
+        <description>Taskana Adapter for executing tasks from external systems</description>
 
-    <developers>
-        <developer>
-            <name>Konstantin Klaeger</name>
-        </developer>
-        <developer>
-            <name>Bernd Breier</name>
-        </developer>
-    </developers>
+        <dependencies>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter</artifactId>
+                        <version>${version.spring.boot}</version>
+                </dependency>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
-        <relativePath />
-    </parent>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-web</artifactId>
+                        <version>${version.spring.boot}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-configuration-processor</artifactId>
+                        <optional>true</optional>
+                        <version>${version.spring.boot}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-test</artifactId>
+                        <version>${version.spring.boot}</version>
+                        <scope>test</scope>
+                </dependency>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-    </properties>
+                <dependency>
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
+                        <version>${version.junit}</version>
+                        <scope>test</scope>
+                </dependency>
 
-    <dependencies>
+                <dependency>
+                        <groupId>pro.taskana</groupId>
+                        <artifactId>taskana-spring</artifactId>
+                        <version>${version.taskana}</version>
+                </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-commons</artifactId>
-            <version>2.1.7.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>pro.taskana</groupId>
-            <artifactId>taskana-spring</artifactId>
-            <version>1.1.5-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>pro.taskana</groupId>
-            <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <classifier>classes</classifier>
-        </dependency>
-
-        <dependency>
-            <groupId>pro.taskana</groupId>
-            <artifactId>taskana-adapter-camunda-outbox-rest</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <classifier>classes</classifier>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
-        </dependency>
-
-    </dependencies>
-
-    <!-- build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId> <version>3.5.1</version> <configuration>
-        <showWarnings>true</showWarnings> <debug>true</debug> <compilerArgs> <arg>-Xlint:all</arg>
-        </compilerArgs> </configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-install-plugin</artifactId> <version>3.0.0-M1</version>
-        </plugin> </plugins> </build -->
-
+        </dependencies>
 
 </project>
